--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/styles.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/style.css"> 
+	
   </head>
-  <body>
-
-    <h1>My Website</h1>
-
-    <p>This is my first website</p>
-
+  <body onload=refreshColor()>
+    <div class="main">
+      <input type="text" id="box" value="rgba(255,255,255,1)">
+      <input type="range" id="red" value="255" min="0" max="255">
+      <input type="range" id="green" value="127" min="0" max="255">
+      <input type="range" id="blue" value="0" min="0" max="255">
+      <input type="range" id="alfa" value="100" min="0" max="100">
+    </div>
+	<script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>		
