some backgrounds are removed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="manifest" href="manifest.json">
   </head>
   <body onload=refreshColor()>
-    <div id="container">
+    <div id="main">
       <input type="text"  id="c" value="rgba(255,255,255,1)">
       <input type="range" id="r" value="255" min="0" max="255">
       <input type="range" id="g" value="127" min="0" max="255">
