--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<link rel="manifest" href="manifest.json">
   </head>
   <body onload=refreshColor()>
-    <div id="main">
-      <input type="text"  id="c" value="rgba(255,255,255,1)">
-      <input type="range" id="r" value="255" min="0" max="255">
-      <input type="range" id="g" value="127" min="0" max="255">
-      <input type="range" id="b" value="0" min="0" max="255">
-      <input type="range" id="a" value="100" min="0" max="100">
+    <div>
+      <input type="text"  id="c">
+      <input type="range" id="r" min="0" max="255" value="255">
+      <input type="range" id="g" min="0" max="255" value="127">
+      <input type="range" id="b" min="0" max="255" value="0"  >
+      <input type="range" id="a" min="0" max="100" value="75" >
     </div>
 	<script type="text/javascript" src="js/script.js" ></script>
   </body>
