--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<link rel="stylesheet" type="text/css" href="css/style.css">  
-        <link rel="manifest" href="./manifest.webmanifest">
+        <link rel="manifest" href="manifest.webmanifest">
         
   </head>
   <body onload="refreshColor()">
@@ -14,6 +14,6 @@
       <input type="range" id="a" min="0" max="100" value="75" >
     </div>
 	<script type="text/javascript" src="js/script.js" ></script>
-  <script src="./index.js" type="module"></script>
+  <script src="index.js" type="module"></script>
   </body>
   </html>
