--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <title>Web</title>
+    <link rel="stylesheet" type="text/css" href="docs/style.css" />
     <link rel="manifest" href="manifest.webmanifest" />
   </head>
-  <body onload="refreshColor()">
-    <div>
-      <input type="button" id="rgba" />
-      <input type="button" id="hex" />
-      <input type="range" id="r" min="0" max="255" value="255" />
-      <input type="range" id="g" min="0" max="255" value="127" />
-      <input type="range" id="b" min="0" max="255" value="0" />
-      <input type="range" id="a" min="0" max="255" value="191.25" />
-    </div>
-    <script type="text/javascript" src="js/script.js"></script>
-    <script src="index.js" type="module"></script>
-  </body>
+
+  <body onload="
+      var file = new XMLHttpRequest();
+      file.open('GET', 'docs/index.html', true);
+      file.onreadystatechange = function() {
+      if (file.readyState === 4) {
+        document.body.innerHTML = file.responseText;
+      }
+    };
+    file.send();
+  "></body>
+  <script type="text/javascript" src="docs/script.js"></script>
+  <script src="index.js" type="module"></script>
 </html>
