--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="docs/style.css" />
     <link rel="manifest" href="manifest.webmanifest" />
   </head>
-  <body>
+  <body onload="refreshColor()">
     <div>
       <input type="button" id="rgba" />
       <input type="button" id="hex" />
