--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
       <input type="range" id="a" min="0" max="255" value="191.25" />
     </div>
   </body>
-  <script type="text/javascript" src="docs/script.js"></script>
+  <script src="docs/script.js"></script>
   <script src="index.js" type="module"></script>
 </html>
